--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,7 @@ header {
     nav {
         display: flex;
         align-items: center;
+        padding: 2px;
 
         ul {
             display: flex;
